- Samus now recoils back slightly on being hit, like in Metroid.
- If a player picks up an Energy Converter without having picked up a missile tank before, one will be provided for free.
- metroid_dropgravity now controls whether items dropped from enemies have gravity or not.
- Mook enemies no longer have a chance to drop Power Bombs on death.

BUGFIXES:
- Player death no longer freezes the life bar.
- Items should no longer become invisible when metroid_dropstay is on.
- Charging up the beams while Time Freeze is active no longer causes a massive amount of frozen trails.
- Put DoomEd numbers on all relevant actors, as per mapper request.
- The Speed Booster script no longer overflows with copious respawning.
- The Ice Combo now checks for ten missiles instead of five.
- The Bomb ammo regeneration has been changed to be work via ACS rather than Decorate, which means that Spread should no longer give infinite bombs and Time Freeze should no longer stop bombs.
- MaxArmorBonus and MaxHealthBonus now no longer appear.
- Floatbob removed from items to keep them from floating into space.
- Cacodemon and Lost Soul no longer momentarily turn into a zombieman on freeze.
- Morph Ball can no longer be triggered on death to leave a dummy Samus.
- Plasma combo can no longer activate doors or lines, and can no longer teleport.
- Morph Ball bombs can no longer teleport.
- Samus' freeze sprite is no longer invisible.
- Frozen Samus is no longer breakable via ice explosions.
- Morph Ball is now freezable.
- Energy armor is no longer constantly pickuppable as long as your bar is entirely blue.
- The morph ball should no longer have troubles with the player's translation.
- In rare instances, people were starting the game with infinite Power Bombs from the get-go. This has been fixed.

POLISH:
- Implemented changelog. Neat.
- GLDefs! Fuckin' everywhere! Thanks to PresidentPeople for help.
- 15/30/100 Energy now have different pickup sprites.